<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogAmount"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textSize="25dp"
                android:textColor="@color/colorAccent"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/textViewAmountDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogAmountValue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogMethod"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                android:tint="@color/colorAccent"
                android:textSize="25dp"
                android:textColor="@color/colorAccent"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/textViewMethodDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogMethodValue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogIssuer"
                android:textSize="18dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/bank"
                    android:textSize="25dp"
                    android:tint="@color/colorAccent"
                    android:textColor="@color/colorAccent"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/textViewIssuerDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialogIssuerValue"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black_24dp"
                android:tint="@color/colorAccent"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/textViewInstallmentsAnnounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogInstallments"
                android:textSize="18dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <TextView
            android:id="@+id/textViewMessageDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogInstallmentsValue"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="horizontal"
        android:padding="2dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="CONFIRMAR"
            android:textSize="18dp"
            android:textColor="#fff"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/cancel"
                android:textSize="18dp"
                android:gravity="center_vertical"
                android:layout_toLeftOf="@+id/iconCancel"
                android:layout_marginRight="8dp"
                />

            <ImageView
                android:id="@+id/iconCancel"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/greyMedium"
                android:layout_marginRight="15dp"
                app:srcCompat="@drawable/ic_close_black_24dp"
                tools:ignore="VectorDrawableCompat"
                />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
